--- a/config.json
+++ b/config.json
@@ -16,13 +16,13 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "Your-Father",
+    "BOTNAME": "SaNaN-KhaN",
     "PREFIX": "/",
     "ADMINBOT": [
-        "100037743553265"
+        "100084696122111"
     ],
     "NDH": [
-        "100037743553265"
+        "100000172070710"
     ],
     "DATABASE": {
         "sqlite": {
