--- a/config.json
+++ b/config.json
@@ -16,7 +16,7 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "SaNaN-KhaN",
+    "BOTNAME": "SaNaN-KhaN.",
     "PREFIX": "/",
     "ADMINBOT": [
         "100084696122111"
